--- a/detail-order.html
+++ b/detail-order.html
@@ -144,9 +144,10 @@
             console.log("Delivered items:", data.deliveredItems);
 
             // Show Delivered Items if available
-            if (data.deliveredItems) {
-              console.log("Rendering delivered items...");
-              renderDeliveredItemsNew(data.deliveredItems);
+            const itemsToRender = data.deliveredItems || data.stockItems;
+            if (itemsToRender) {
+              console.log("Rendering delivered items...", itemsToRender);
+              renderDeliveredItemsNew(itemsToRender);
             } else {
               console.warn("No delivered items found in order data");
             }
@@ -186,9 +187,10 @@
                 if (statusDesc) statusDesc.textContent = "Terima kasih! Pesanan Anda sedang diproses/sudah dikirim.";
 
                 // IMPORTANT: Also render delivered items in fallback path
-                if (data.deliveredItems) {
-                  console.log("Rendering delivered items (fallback)...");
-                  renderDeliveredItemsNew(data.deliveredItems);
+                const itemsToRender = data.deliveredItems || data.stockItems;
+                if (itemsToRender) {
+                  console.log("Rendering delivered items (fallback)...", itemsToRender);
+                  renderDeliveredItemsNew(itemsToRender);
                 }
 
                 if (data.buyerNotes) {
@@ -265,12 +267,22 @@
         parent.insertBefore(container, parent.firstChild); // Insert at top of list
       }
 
-      // Normalize items to array
+      // Normalize items to array and handle string vs object
       let itemsArray = [];
       if (Array.isArray(items)) {
-        itemsArray = items;
-      } else {
-        itemsArray = [{ content: items, note: '' }];
+        itemsArray = items.map(item => {
+          if (typeof item === 'string') {
+            return { content: item, note: '' };
+          }
+          return item;
+        });
+      } else if (items) {
+        // Single item
+        if (typeof items === 'string') {
+          itemsArray = [{ content: items, note: '' }];
+        } else {
+          itemsArray = [items];
+        }
       }
 
       // Create/Get List Container
@@ -302,17 +314,17 @@
         }
 
         details.innerHTML = `
-            < summary class="flex justify-between items-center p-3 cursor-pointer select-none bg-white/5 hover:bg-white/10 transition" >
+            <summary class="flex justify-between items-center p-3 cursor-pointer select-none bg-white/5 hover:bg-white/10 transition">
                 <span class="text-xs font-bold text-emerald-400 uppercase tracking-wider">Item #${index + 1}</span>
                 <span class="text-slate-400 transition-transform duration-300 group-open:rotate-180">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
                   </svg>
                 </span>
-            </summary >
+            </summary>
             <div class="p-3 border-t border-white/10">
               <div class="bg-black/40 rounded-lg p-3 border border-emerald-500/10 relative group/copy">
-                <div class="font-mono text-sm text-emerald-300 break-all whitespace-pre-wrap select-all font-medium pr-8">${item.content}</div>
+                <div class="font-mono text-sm text-emerald-300 break-all whitespace-pre-wrap select-all font-medium pr-8">${item.content || 'Content Unavailable'}</div>
                 <button onclick="navigator.clipboard.writeText(this.previousElementSibling.innerText); this.innerHTML='✓';" class="absolute top-2 right-2 text-slate-500 hover:text-emerald-400 bg-slate-800/50 hover:bg-slate-800 p-1 rounded transition">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3" viewBox="0 0 20 20" fill="currentColor">
                     <path d="M8 3a1 1 0 011-1h2a1 1 0 110 2H9a1 1 0 01-1-1z" />
